removed pots from gallery. button for mobile and fixed alignment of products in home pahe

--- a/src/components/index-display.module.css
+++ b/src/components/index-display.module.css
@@ -67,6 +67,7 @@
 
 .products {
     display: flex;
+    justify-content: space-around;
 }
 
 .products li {
@@ -159,13 +160,7 @@
     }
 
     .button-container {
-        position: absolute;
-        top: 60vh;
-        left: 30%;
-        right: 30%;
-        margin: 10px auto;
-        display: flex;
-        justify-content: center;
+        display: none;
     }
 
     .strength-list li {
